# sf311ai

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.json  config.yaml  pyproject.toml  pytest.ini  requirements.txt  submit_sf311.py
.github/: dependabot.yml
.github/workflows/: ci.yaml
scripts/: run_workflow.py
sf311ai/: __init__.py  ai_detector_yoloworld.py  api_client.py  config.py  data_utils.py  exceptions.py  workflows.py
tests/integration/: test_workflow.py
tests/unit/: test_ai_detector_yoloworld.py  test_api_client.py  test_config.py  test_data_utils.py
